# virtual-world-python

./: .pre-commit-config.yaml  main.py  pyproject.toml
.github/workflows/: typecheck.yml
virtual_world/: config.py  simulation.py  world.py
virtual_world/organisms/: collision_result.py  direction.py  factory.py  organism.py  position.py
virtual_world/organisms/animals/: animal.py  animals.py
virtual_world/organisms/plants/: plant.py  plants.py
virtual_world/renderer/: application.py  windows.py
