[tool.poetry]
name = "virtual-world-python"
version = "0.1.0"
description = ""
authors = ["Jerzy Szyjut <jerzy.szyjut@outlook.com>"]
readme = "README.md"
packages = [{include = "virtual_world_python"}]

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.5.1"
pre-commit = "^3.3.2"
mypy = "^1.3.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
